# Orange3_MCP_SERVER

./: README.md
orange3-mcp-server/orange3-mcp-server/: README.md  environment.yml  mcp-config.json  pyproject.toml  smithery.yaml
orange3-mcp-server/orange3-mcp-server/examples/: iris_demo.md
orange3-mcp-server/orange3-mcp-server/src/orange3_mcp_server/: __main__.py  main.py
orange3-mcp-server/orange3-mcp-server/src/orange3_mcp_server/tools/: __init__.py  data_tools.py  evaluate_tools.py  model_tools.py  transform_tools.py  unsupervised_tools.py  visualize_tools.py
